--- a/Akari/Assets/GameMain/Scripts/Runtime/Akari.Runtime.asmdef
+++ b/Akari/Assets/GameMain/Scripts/Runtime/Akari.Runtime.asmdef
@@ -5,7 +5,8 @@
         "UnityGameFramework.Runtime",
         "UnityGameFramework.Editor",
         "Libraries",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Cinemachine"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
