--- a/Akari/Assets/GameFramework/Libraries/GameFramework/GameFramework.asmdef
+++ b/Akari/Assets/GameFramework/Libraries/GameFramework/GameFramework.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "GameFramework",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
